[package]
name = "yaw"
version = "0.1.0"
authors = ["bokuweb <bokuweb12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
byteorder = "1.3.2"
leb128 = "0.2.4"
better-panic = "0.1.2"
num-traits = "0.2"
num-derive = "0.2"

[dev-dependencies]
wabt = "0.9.0"
wasmi = "0.6.2"
criterion = "0.3"
sdl2 = "0.32.2"

[[bench]]
name = "benchmark"
harness = false